--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,12 @@
 [metadata]
-name = proper
+name = proper_form
 version= 1.190730
 author = Juan-Pablo Scaletti
 author_email = juanpablo@jpscaletti.com
-description = A web framework optimized for programmer happiness.
+description = A not-terrible Python form library.
 long_description = file:README.md
 long_description_content_type = text/markdown
-url = https://properframework.dev
-project_urls =
-    Documentation = https://properframework.dev/docs
+url = https://github.com/jpscaletti/proper-form
 license = Apache License Version 2.0
 license_file = LICENSE
 classifiers =
@@ -18,26 +16,13 @@ classifiers =
     Programming Language :: Python :: 3
 
 
-[bdist_wheel]
-universal = 1
-
-
 [options]
 include_package_data = true
 packages = find:
 python_requires = >=3.6,<4.0
 install_requires =
-    copier ~=2.4
-    cryptography ~=2.5
-    gevent ~=1.4
-    gevent-websocket
-    itsdangerous ~=1.1
-    jinja2 ~=2.10
-    pyceo ~=2.190702
-    toml ~=0.10
-    text-editor ~=1.0.5
-    ujson ~=1.35
-    wsaccel ~=0.6
+    email-validator ~=1.0.4
+    idna ~=2.8
 
 [options.packages.find]
 exclude =
@@ -55,21 +40,12 @@ dev =
     flake8
     ipdb
     tox
-    mkdocs
-    mkdocs-material
-    pymdown-extensions
-    pygments
-    pygments-github-lexers
     # Documentation
     mkdocs
     mkdocs-material
     pymdown-extensions
     pygments
     pygments-github-lexers
-
-[options.entry_points]
-console_scripts =
-    proper = proper.cli:run
 
 
 [flake8]
