--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = proper_form
-version= 1.190730
+version= 0.190726
 author = Juan-Pablo Scaletti
 author_email = juanpablo@jpscaletti.com
 description = A not-terrible Python form library.
@@ -23,6 +23,7 @@ python_requires = >=3.6,<4.0
 install_requires =
     email-validator ~=1.0.4
     idna ~=2.8
+    markupsafe ~=1.1.1
 
 [options.packages.find]
 exclude =
