--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ install_requires =
     email-validator ~=1.0.4
     idna ~=2.8
     markupsafe ~=1.1.1
+    python-slugify ~=3.0.3
 
 [options.packages.find]
 exclude =
