add backrefs to form sets

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,10 +33,12 @@ exclude =
 [options.extras_require]
 testing =
     pytest-cov
+    pony
 
 dev =
     # Testing & Validation
     pytest-cov
+    pony
     pytest
     pytest-flake8
     flake8
