--- a/setup.cfg
+++ b/setup.cfg
@@ -34,11 +34,13 @@ exclude =
 testing =
     pytest-cov
     pony
+    sqlalchemy
 
 dev =
     # Testing & Validation
     pytest-cov
     pony
+    sqlalchemy
     pytest
     pytest-flake8
     flake8
