--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,14 @@
 [metadata]
 name = proper_form
-version= 0.200326
+version= 0.200406
 author = Juan-Pablo Scaletti
 author_email = juanpablo@jpscaletti.com
 description = A not-terrible Python form library.
 long_description = file:README.md
 long_description_content_type = text/markdown
 url = https://github.com/jpscaletti/proper-form
+project_urls =
+    Documentation = https://jpscaletti.github.io/proper-form
 license = Apache License Version 2.0
 license_file = LICENSE
 classifiers =
@@ -50,8 +52,6 @@ dev =
     pymdown-extensions
     pygments
     pygments-github-lexers
-
-
 
 [flake8]
 max-complexity = 10
