--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = proper_form
-version= 0.200406
+version= 0.200628
 author = Juan-Pablo Scaletti
 author_email = juanpablo@jpscaletti.com
 description = A not-terrible Python form library.
 long_description = file:README.md
 long_description_content_type = text/markdown
-url = https://github.com/jpscaletti/proper-form
+url = https://github.com/jpsca/proper-form
 project_urls =
-    Documentation = https://jpscaletti.github.io/proper-form
+    Documentation = https://jpsca.github.io/proper-form
 license = Apache License Version 2.0
 license_file = LICENSE
 classifiers =
