--- a/setup.cfg
+++ b/setup.cfg
@@ -1,25 +1,25 @@
 [metadata]
-name = proper_form
-version= 0.200628
+name = hyperform
+version= 0.200828
+url = https://github.com/jpsca/hyperform
+project_urls =
+    Documentation = https://jpsca.github.io/hyperform
+    Issue tracker = https://github.com/jpsca/hyperform/issues
 author = Juan-Pablo Scaletti
 author_email = juanpablo@jpscaletti.com
-description = A not-terrible Python form library.
-long_description = file:README.md
-long_description_content_type = text/markdown
-url = https://github.com/jpsca/proper-form
-project_urls =
-    Documentation = https://jpsca.github.io/proper-form
-license = Apache License Version 2.0
-license_file = LICENSE
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
-    Programming Language :: Python :: 3
+license = Apache License Version 2.0
+license_file = LICENSE
+description = A not-terrible Python form library.
+long_description = file:README.md
+long_description_content_type = text/markdown
 
 [options]
-include_package_data = true
 packages = find:
+include_package_data = true
 python_requires = >=3.6,<4.0
 install_requires =
     email-validator ~= 1.0
@@ -32,7 +32,7 @@ exclude =
     tests
 
 [options.extras_require]
-testing =
+test =
     pytest
     pytest-cov
     pony;python_version<"3.8"
@@ -54,24 +54,31 @@ dev =
     pygments-github-lexers
 
 [flake8]
+select =
+  B,  # bugbear
+  B9,  # bugbear opinionated
+  C,  # mccabe, comprehensions, commas
+  E,  # pycodestyle errors
+  F,  # pyflakes
+  G,  # logging format
+  I,  # imports
+  P,
+  Q,  # quotes
+  RST,  # rst docstring formatting
+  T0,  # print
+  T4,  # mypy
+  W,  # pycodestyle warnings
+
+ignore =
+    W503,  # W503 line break before binary operator
+    E203,  # E203 whitespace before ':'
+
 max-complexity = 10
 max-line-length = 88
 
 statistics = true
 doctests = True
 accept-encodings = utf-8
-
-select = C,E,F,W,B,B950
-# W503 line break before binary operator
-# E203 whitespace before ':'
-# D100  Missing docstring in public module
-# D101  Missing docstring in public class
-# D102  Missing docstring in public method
-# D103  Missing docstring in public function
-# D104  Missing docstring in public package
-# D105  Missing docstring in magic method
-# D107  Missing docstring in __init__
-ignore = W503,E203,D100,D101,D102,D103,D104,D105,D107
 
 [tool:pytest]
 addopts = --doctest-modules
