--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,8 @@ envlist = py36,py37,py38
 [testenv]
 skip_install = true
 commands =
-	pip install .[testing]
-    pytest -x proper_form tests
+    pip install .[test]
+    pytest -x hyperform tests
 
 [coverage:run]
 branch = True
