--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
----
 dist: bionic
 language: python
 python:
-  - '3.6'
-  - '3.7'
-  - '3.8-dev'
+  - "3.6"
+  - "3.7"
+  - "3.8"
 
-matrix:
-  allow_failures:
-    - python: '3.8-dev'
- 
 before_install: pip install -U pip coveralls
-install: pip install .[testing]
-script: pytest --cov proper_form proper_form tests
+install: pip install .[test]
+script: pytest --cov hyperform --cov tests .
 after_success: coveralls
