Pin dnspython to 1.*

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = hyperform
-version= 0.200829
+version= 0.201008
 url = https://github.com/jpsca/hyperform
 project_urls =
     Documentation = https://jpsca.github.io/hyperform
@@ -22,7 +22,8 @@ packages = find:
 include_package_data = true
 python_requires = >=3.6,<4.0
 install_requires =
-    email-validator ~= 1.0
+    email-validator ~= 1.1
+    dnspython ~= 1.15
     idna ~= 2.8
     markupsafe ~= 1.1
     python-slugify ~= 3.0
