fix flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,9 +55,12 @@ dev =
     pygments-github-lexers
 
 [flake8]
+application-package-names = sqla_wrapper
+application-import-names = sqla_wrapper
+import-order-style = pycharm
+
 select =
   B,  # bugbear
-  B9,  # bugbear opinionated
   C,  # mccabe, comprehensions, commas
   E,  # pycodestyle errors
   F,  # pyflakes
@@ -65,21 +68,27 @@ select =
   I,  # imports
   P,
   Q,  # quotes
-  RST,  # rst docstring formatting
-  T0,  # print
   T4,  # mypy
   W,  # pycodestyle warnings
 
 ignore =
     W503,  # W503 line break before binary operator
     E203,  # E203 whitespace before ':'
+    E501,
 
+max-line-length = 98
 max-complexity = 10
-max-line-length = 88
 
-statistics = true
-doctests = True
-accept-encodings = utf-8
+inline-quotes = double
+multiline-quotes = double
+docstring-quotes = double
+
+exclude =
+  .git,
+  .venv
+  __pycache__,
+  conftest.py,
+  docs,
 
 [tool:pytest]
 addopts = --doctest-modules
