--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = hyperform
-version= 0.201010
+version= 0.3.0
 url = https://github.com/jpsca/hyperform
 project_urls =
     Documentation = https://jpsca.github.io/hyperform
@@ -11,8 +11,8 @@ classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
-license = Apache License Version 2.0
-license_file = LICENSE
+license = MIT
+license_file = MIT-LICENSE
 description = A not-terrible Python form library.
 long_description = file:README.md
 long_description_content_type = text/markdown
@@ -22,11 +22,11 @@ packages = find:
 include_package_data = true
 python_requires = >=3.6,<4.0
 install_requires =
-    email-validator ~= 1.1
-    dnspython ~= 1.15
-    idna ~= 2.8
-    markupsafe ~= 1.1
-    python-slugify ~= 3.0
+    email-validator >= 1.1
+    dnspython >= 1.15
+    idna >= 2.8
+    markupsafe >= 1.1
+    python-slugify >= 3.0
 
 [options.packages.find]
 exclude =
@@ -44,9 +44,7 @@ dev =
     pytest-cov
     pony;python_version<"3.8"
     sqlalchemy
-    pytest-flake8
     flake8
-    ipdb
     tox
     mkdocs
     mkdocs-material
@@ -55,8 +53,8 @@ dev =
     pygments-github-lexers
 
 [flake8]
-application-package-names = sqla_wrapper
-application-import-names = sqla_wrapper
+application-package-names = hyperform
+application-import-names = hyperform
 import-order-style = pycharm
 
 select =
